# racism

./: Makefile  Makefile.am  Makefile.in  Payload  README.md  SystemVersion.plist  SystemVersion.xml  aclocal.m4  config.status  configure  configure.ac  fake.ipa
afc3.app/: Info.plist  afc3  embedded.mobileprovision
afc3.app/_CodeSignature/: CodeResources
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  fake.ipa  racism  racism.c
